--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.3.0",
+    "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "tailwindcss": "^4.1.3"
   }
 }
