Fix redirect rule to exclude homepage

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-    "redirects": [
-      {
-        "source": "/:path((?!.*\\/$).*)",
-        "destination": "/:path/",
-        "permanent": true
-      }
-    ]
-  }
-  
+  "redirects": [
+    {
+      "source": "/:path((?!index$|.*\\/|$).+)",
+      "destination": "/:path/",
+      "permanent": true
+    }
+  ]
+}
