--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
     "astro": "^5.6.1",
     "dotenv": "^16.4.7",
     "tailwindcss": "^4.1.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1"
+  },
+  "prettier": {
+    "plugins": ["prettier-plugin-astro"],
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2
   }
 }
