--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.1.5",
     "@notionhq/client": "^2.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
@@ -20,7 +21,9 @@
     "prettier-plugin-astro": "^0.14.1"
   },
   "prettier": {
-    "plugins": ["prettier-plugin-astro"],
+    "plugins": [
+      "prettier-plugin-astro"
+    ],
     "semi": true,
     "singleQuote": true,
     "tabWidth": 2
