Vercelのデプロイ時に自動的にsitemap.xmlを作成するようにした

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "destination": "/:path/",
       "permanent": true
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap-index.xml"
+    }
   ]
 }
