--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.4.1",
     "@astrojs/vercel": "^8.1.5",
     "@notionhq/client": "^2.3.0",
     "@tailwindcss/vite": "^4.1.3",
