--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "redirects": [
     {
+      "source": "/index.html",
+      "destination": "/",
+      "permanent": true
+    },
+    {
       "source": "/:path((?!index$|index\\.html$|.*\\/|$).+)",
       "destination": "/:path/",
       "permanent": true
