sitemap.xmlを表示させるテスト

--- a/vercel.json
+++ b/vercel.json
@@ -57,10 +57,5 @@
       "permanent": true
     }
   ],
-  "rewrites": [
-    {
-      "source": "/sitemap.xml",
-      "destination": "/sitemap-index.xml"
-    }
-  ]
+  "rewrites": []
 }
