sitemap.xmlの生成コードを修正

--- a/vercel.json
+++ b/vercel.json
@@ -57,5 +57,10 @@
       "permanent": true
     }
   ],
-  "rewrites": []
+  "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap-index.xml"
+    }
+  ]
 }
