Vercelの正規表現に従った

--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
       "permanent": true
     },
     {
-      "source": "/:path((?!index$|index\\.html$|.*\\/|.*\\.(xml|txt|json)$|$).+)",
+      "source": "/:path((?!.*\\.).+)",
       "destination": "/:path/",
       "permanent": true
     },
