Vercelの正規表現を削除

--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
       "permanent": true
     },
     {
-      "source": "/:path((?!.*\\.).+)",
+      "source": "/:path((?!index$|index\\.html$|.*\\/|$).+)",
       "destination": "/:path/",
       "permanent": true
     },
