--- a/vercel.json
+++ b/vercel.json
@@ -59,8 +59,13 @@
   ],
   "rewrites": [
     {
-      "source": "/sitemap.xml",
+      "source": "/sitemap-index.xml",
       "destination": "/sitemap-index.xml"
+    },
+    {
+      "source": "/sitemap-0.xml",
+      "destination": "/sitemap-0.xml"
     }
-  ]
+  ],
+  "trailingSlash": false
 }
