--- a/vercel.json
+++ b/vercel.json
@@ -63,7 +63,15 @@
       "destination": "/sitemap-index.xml"
     },
     {
+      "source": "/sitemap-index.xml/",
+      "destination": "/sitemap-index.xml"
+    },
+    {
       "source": "/sitemap-0.xml",
+      "destination": "/sitemap-0.xml"
+    },
+    {
+      "source": "/sitemap-0.xml/",
       "destination": "/sitemap-0.xml"
     }
   ],
