--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "postbuild": "cp dist/client/sitemap*.xml public/",
+    "postbuild": "cp dist/client/sitemap-index.xml public/sitemap.xml",
     "preview": "astro preview",
     "astro": "astro"
   },
