--- a/vercel.json
+++ b/vercel.json
@@ -57,24 +57,15 @@
       "permanent": true
     },
     {
-      "source": "/sitemap-index.xml/",
-      "destination": "/sitemap-index.xml",
-      "permanent": true
-    },
-    {
-      "source": "/sitemap-0.xml/",
-      "destination": "/sitemap-0.xml",
+      "source": "/sitemap.xml/",
+      "destination": "/sitemap.xml",
       "permanent": true
     }
   ],
   "rewrites": [
     {
-      "source": "/sitemap-index.xml",
-      "destination": "/sitemap-index.xml"
-    },
-    {
-      "source": "/sitemap-0.xml",
-      "destination": "/sitemap-0.xml"
+      "source": "/sitemap.xml",
+      "destination": "/sitemap.xml"
     }
   ],
   "trailingSlash": true,
