--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vercel": "^8.1.5",
     "@notionhq/client": "^2.3.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.6.1",
     "dotenv": "^16.4.7",
     "tailwindcss": "^4.1.3"
